[package]
name = "pysylt-2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pysylt_2d"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module"] }
sylt-2d = { git = "https://github.com/hessikaveh/sylt-2d.git" }
